sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:13: error: value arr is not a member of Array[Int]
  return crepes.arr.maxBy(identity)
                ^BasicPancake:13: error: missing argument list for method identity in object Predef
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `identity _` or `identity(_)` instead of `identity`.
  return crepes.arr.maxBy(identity)
                          ^